# alpha-SRE

./: .gitignore  CODEX_DEVELOPMENT_GOVERNANCE.md  FAQ.md  INTERFACE_CONTRACT.md  README.md  README_FOR_CODEX.md  SHORT_NAV.md  START_HERE.md  archive_structure.md  causal_validation_spec.md  codex_final_startup_prompt.md  codex_run_card.md  codex_short_command_card.md  consistency_metric_catalog.md  execution_governance.md  final_document_index.md  implementation_task_board.md  incident_postmortem_template.md  integration_plan_alpha_autopilot.md  knowledge_visibility_spec.md  narrative_state_schema.md  new_requirement_execution_flow.md  new_requirement_intake_template.md  package_manifest.md  package_overview.md  pyproject.toml  replay_spec.md  revision_checklist_v1.md  schema_evolution_policy.md  task_launch_template.md  test_governance.md
alpha_sre/: __init__.py  artifacts.py  causal_validation.py  errors.py  events.py  gate.py  incident.py  integration.py  metrics.py  replay.py  review.py  serialization.py  state.py  validation.py  versioning.py
archive/: README.md
claude-review/V2/: V2-prereview.md  V2-review-evidence.md  V2-review.md  codex-response.md  final-disposition.md
codex-review/: codex-cloud-review  v2-pr-requirements-narrative-kernel.md
experimental/: README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/: test_alpha_sre.py  test_artifacts.py  test_gate.py  test_integration.py  test_metrics_narrative_denominators.py  test_narrative_state_kernel.py  test_replay_semantics.py
(+92 files in other folders)
